--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -9,11 +9,15 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
     "@types/node": "^20.14.10",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.16.2",
     "sst": "^2.43.4",
     "vitest": "^2.0.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.2"
+    "@prisma/client": "^5.16.2",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1659.0",
+    "uuid": "^10.0.0"
   }
 }
