--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.16.2",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1659.0",
+    "stripe": "^16.2.0",
     "uuid": "^10.0.0"
   }
 }
