--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "aws-amplify": "5.3.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "daisyui": "^4.12.10",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
