--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
     "@prisma/client": "^5.16.2",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
