--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,16 +16,19 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "aws-amplify": "5.3.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "open-next": "^3.0.8",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
