--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
+    "@types/babel__core": "^7.20.5",
     "@types/node": "^20.14.10",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.16.2",
